@@ -1,3 +1,8 @@
+2017-04-12  Tim Daly <axiomcas@gmail.com>
+	    Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/lib/prt.c: Fix overlapping 'strcpy'
+
 2017-04-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 	    Barry Trager
 
